// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a blank banner wrapper 1`] = `
<BackgroundTile
  isDeceased={false}
>
  <SelectableTile
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <InjectIntl(DemographicsBanner)
      applicationContent={null}
      className="selectable-demographics-banner"
      color="auto"
      deceasedDate={null}
      gestationalAge={null}
      identifiers={Object {}}
      isAriaHidden={false}
      postMenstrualAge={null}
      preferredFirstName={null}
    />
  </SelectableTile>
  <div
    className="divider"
  />
  <button
    className="info-button"
    onClick={[MockFunction]}
    role="link"
    type="button"
  >
    Terra.demographicsBanner.info
    <IconInformation
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
</BackgroundTile>
`;

exports[`renders the banner wrapper with all props 1`] = `
<BackgroundTile
  isDeceased={true}
>
  <SelectableTile
    id="selectableDemographics"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <InjectIntl(DemographicsBanner)
      age="25 Years"
      alt="JD"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      className="selectable-demographics-banner"
      color="neutral"
      dateOfBirth="May 9, 1993"
      deceasedDate="January 10, 2020"
      gender="Male"
      gestationalAge="April 5, 2016"
      hashValue="alternative hash"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      initials="JD"
      isAriaHidden={false}
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge="April 7, 2016"
      preferredFirstName="John"
    />
  </SelectableTile>
  <div
    className="divider"
  />
  <button
    className="info-button"
    id="infoButton"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    role="link"
    type="button"
  >
    Terra.demographicsBanner.info
    <IconInformation
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
</BackgroundTile>
`;
